[project]
name = "get-papers-list"
version = "0.1.0"
description = ""
authors = [
    {name = "Darshana0810",email = "147826305+Darshana0810@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
